<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.pirckheimer-gymnasium</groupId>
    <artifactId>jbox2d</artifactId>
    <version>3.1.0</version>
    <packaging>pom</packaging>
    <name>jbox2d</name>
    <description>JBox2D is a 2d Java physics engine, a port of the C++ Box2d engine.  This is the parent pom for the library and testbed modules.</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <modules>
        <module>jbox2d-library</module>
        <module>jbox2d-serialization</module>
        <module>jbox2d-testbed</module>
        <module>jbox2d-testbed-jogl</module>
        <module>jbox2d-testbed-javafx</module>
    </modules>

    <url>https://github.com/engine-pi/jbox2d</url>
    <issueManagement>
        <url>https://github.com/engine-pi/jbox2d/issues</url>
    </issueManagement>

    <scm>
        <url>scm:git:git@github.com:engine-pi/jbox2d.git</url>
        <connection>scm:git:git@github.com:engine-pi/jbox2d.git</connection>
        <developerConnection>scm:git:git@github.com:engine-pi/jbox2d.git</developerConnection>
        <tag>jbox2d-2.3.0-BETA</tag>
    </scm>

    <developers>
        <developer>
            <id>josef@friedrich.rocks</id>
            <name>Josef Friedrich</name>
            <email>josef@friedrich.rocks</email>
            <url>https://josef.friedrich.rocks</url>
        </developer>
        <developer>
            <id>danielmurphy161@gmail.com</id>
            <name>Daniel Murphy</name>
            <email>danielmurphy161@gmail.com</email>
            <url>http://www.dmurph.com</url>
        </developer>
        <developer>
            <id>ewjordan</id>
            <name>Eric Jordan</name>
            <email>ewjordan@gmail.com</email>
            <url>http://ewjordan.com</url>
        </developer>
        <developer>
            <id>quixote_arg</id>
            <name>Andres Quijano</name>
            <email>tulsidas@gmail.com</email>
            <url>http://www.jengibre.com.ar</url>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>Simplified BSD License</name>
            <url>http://www.opensource.org/licenses/bsd-license.php</url>
        </license>
    </licenses>

    <build>
        <pluginManagement>
            <plugins>
                <!-- https://maven.apache.org/plugins/maven-assembly-plugin/ -->
                <plugin>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.7.1</version>
                    <configuration>
                        <descriptorRefs>
                            <descriptorRef>jar-with-dependencies</descriptorRef>
                        </descriptorRefs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.5</version>
                    <configuration>
                        <autoVersionSubmodules>true</autoVersionSubmodules>
                        <useReleaseProfile>false</useReleaseProfile>
                        <releaseProfiles>release</releaseProfiles>
                        <goals>deploy</goals>
                    </configuration>
                </plugin>
                <!-- https://maven.apache.org/plugins/maven-compiler-plugin/ -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <optimise>true</optimise>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <!-- https://www.mojohaus.org/versions/versions-maven-plugin/-->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.17.1</version>
            </plugin>
            <!-- https://maven.apache.org/plugins/maven-javadoc-plugin/ -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <!-- to disable the "missing" warnings -->
                    <doclint>all,-missing</doclint>
                    <!--
                    https://maven.apache.org/plugins/maven-javadoc-plugin/examples/tag-configuration.html -->
                    <tags>
                        <tag>
                            <name>warning</name>
                            <placement>a</placement>
                            <head>warning:</head>
                        </tag>
                    </tags>

                    <!--
                    https://maven.apache.org/plugins/maven-javadoc-plugin/examples/taglet-configuration.html -->
                    <taglet>rocks.friedrich.permalink_taglet.PermalinkTaglet</taglet>

                    <tagletArtifact>
                        <groupId>rocks.friedrich</groupId>
                        <artifactId>permalink-taglet</artifactId>
                        <version>0.2.0</version>
                    </tagletArtifact>

                    <!--
                    https://maven.apache.org/plugins/maven-javadoc-plugin/examples/stylesheet-configuration.html -->
                    <stylesheetfile>javadoc-stylesheet.css</stylesheetfile>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>de.pirckheimer-gymnasium</groupId>
                        <artifactId>engine-pi</artifactId>
                        <version>0.27.0</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- https://maven.apache.org/plugins/maven-source-plugin/ -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <!-- https://maven.apache.org/plugins/maven-gpg-plugin/ -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.2.4</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                        <configuration>
                            <!-- This is necessary for gpg to not try to use the pinentry
                                programs -->
                            <gpgArguments>
                                <arg>--pinentry-mode</arg>
                                <arg>loopback</arg>
                            </gpgArguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- https://central.sonatype.org/publish/publish-portal-maven/ -->
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.5.0</version>
                <extensions>true</extensions>
                <configuration>
                    <!-- see ~/.m2/settings.xml -->
                    <publishingServerId>central</publishingServerId>
                    <tokenAuth>true</tokenAuth>
                    <autoPublish>true</autoPublish>
                </configuration>
            </plugin>
            <!--
https://code.revelc.net/formatter-maven-plugin/
            https://code.revelc.net/formatter-maven-plugin/examples.html#basic-configuration-using-external-resource -->
            <plugin>
                <groupId>net.revelc.code.formatter</groupId>
                <artifactId>formatter-maven-plugin</artifactId>
                <version>2.24.1</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>format</goal>
                        </goals>
                        <configuration>
                            <configFile>eclipse-formatter.xml</configFile>
                        </configuration>
                    </execution>
                </executions>
                <dependencies>
                    <dependency>
                        <groupId>de.pirckheimer-gymnasium</groupId>
                        <artifactId>engine-pi</artifactId>
                        <version>0.29.0</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>

</project>
